Refactor tests for hooks and pages: - Updated `useMantenimientoPreventivo` tests to include cliente data and improve assertions. - Modified `useMantenimientos` tests to accommodate new cliente parameter. - Removed `useSucursales` tests as the functionality was deprecated. - Enhanced `useUsers` tests for error handling and form interactions. - Added new tests for `Clientes` page to validate loading states and form interactions. - Updated `Mantenimiento`, `MantenimientosCorrectivos`, and `MantenimientosPreventivos` tests to include cliente data. - Adjusted `Reportes` tests to ensure filters trigger report generation correctly. - Deleted `Sucursales` tests as part of the cleanup process.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,27 +27,27 @@ jobs:
           cd backend
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      #- name: Run Backend Tests with Coverage
-      #  run: |
-      #    cd backend
-      #    pytest -v --cov=src --cov-report=xml --junitxml=pytest-report.xml
-      #- name: Publish Test Results
-      #  uses: dorny/test-reporter@v1
-      #  if: always()
-      #  with:
-      #    name: Pytest Results
-      #    path: backend/pytest-report.xml
-      #    reporter: java-junit
-      #- name: Code Coverage Summary
-      #  uses: irongut/CodeCoverageSummary@v1.3.0
-      #  with:
-      #    filename: backend/coverage.xml
-      #    format: markdown
-      #    output: file
-      #    fail_below_min: false
-      #- name: Write Coverage to Summary
-      #  run: |
-      #    cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
+      - name: Run Backend Tests with Coverage
+        run: |
+          cd backend
+          pytest -v --cov=src --cov-report=xml --junitxml=pytest-report.xml
+      - name: Publish Test Results
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Pytest Results
+          path: backend/pytest-report.xml
+          reporter: java-junit
+      - name: Code Coverage Summary
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: backend/coverage.xml
+          format: markdown
+          output: file
+          fail_below_min: false
+      - name: Write Coverage to Summary
+        run: |
+          cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
       - name: Prepare Backend Artifact
         run: |
           mkdir -p backend-artifact
@@ -87,75 +87,75 @@ jobs:
           echo "VITE_OSRM_URL=${{ secrets.OSRM_URL }}" >> .env
           echo "VITE_WEB_PUSH_PUBLIC_KEY_QA=${{ secrets.VAPID_PUBLIC_KEY }}" >> .env
           echo "VITE_WEB_PUSH_PUBLIC_KEY_PROD=${{ secrets.VAPID_PRIVATE_KEY }}" >> .env
-        #  echo "VITE_NODE_ENV=test" >> .env
-      #- name: Run Frontend Tests with Coverage
-      #  run: |
-      #    cd frontend
-      #    npm run coverage
-      #- name: Publish Vitest Results
-      #  uses: dorny/test-reporter@v1
-      #  if: always()
-      #  with:
-      #    name: Vitest Results
-      #    path: frontend/junit.xml
-      #    reporter: java-junit
-      #- name: Install xmlstarlet
-      #  run: |
-      #    sudo apt-get update
-      #    sudo apt-get install -y xmlstarlet
-      #- name: Write Frontend Coverage to Summary
-      #  run: |
-      #    echo "## Frontend Unit Test Coverage" >> $GITHUB_STEP_SUMMARY
-      #    echo "| File | Line Rate | Health |" >> $GITHUB_STEP_SUMMARY
-      #    echo "|------|------------|--------|" >> $GITHUB_STEP_SUMMARY
-#
-      #    if [ -f frontend/coverage/clover.xml ]; then
-      #      xmlstarlet sel -t -m "//file" -v "concat(@name,'|',metrics/@statements,'|',metrics/@coveredstatements)" -n frontend/coverage/clover.xml |
-      #      while IFS='|' read -r FILE STATEMENTS COVERED_STATEMENTS; do
-      #        if [ -z "$STATEMENTS" ] || [ "$STATEMENTS" = "0" ]; then
-      #          LINE_RATE="0%"
-      #          HEALTH="❌"
-      #        else
-      #          LINE_RATE_INT=$(echo "($COVERED_STATEMENTS * 100) / $STATEMENTS" | bc)
-      #          LINE_RATE=$(printf "%s%%" "$LINE_RATE_INT")
-      #          if [ "$LINE_RATE_INT" -ge 80 ]; then
-      #            HEALTH="✔"
-      #          elif [ "$LINE_RATE_INT" -ge 50 ]; then
-      #            HEALTH="➖"
-      #          else
-      #            HEALTH="❌"
-      #          fi
-      #        fi
-      #        echo "| $FILE | $LINE_RATE | $HEALTH |" >> $GITHUB_STEP_SUMMARY
-      #      done
-#
-      #      TOTAL_STATEMENTS=$(xmlstarlet sel -t -v "//project/metrics/@statements" frontend/coverage/clover.xml)
-      #      COVERED_STATEMENTS=$(xmlstarlet sel -t -v "//project/metrics/@coveredstatements" frontend/coverage/clover.xml)
-#
-      #      if [ -z "$TOTAL_STATEMENTS" ] || [ "$TOTAL_STATEMENTS" -eq 0 ]; then
-      #        LINE_RATE="0%"
-      #        HEALTH="❌"
-      #        SUMMARY="0% (0 / 0)"
-      #      else
-      #        LINE_RATE_INT=$(echo "($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc)
-      #        LINE_RATE=$(printf "%s%%" "$LINE_RATE_INT")
-      #        SUMMARY="$LINE_RATE ($COVERED_STATEMENTS / $TOTAL_STATEMENTS)"
-      #        if [ "$LINE_RATE_INT" -ge 80 ]; then
-      #          HEALTH="✔"
-      #        elif [ "$LINE_RATE_INT" -ge 50 ]; then
-      #          HEALTH="➖"
-      #        else
-      #          HEALTH="❌"
-      #        fi
-      #      fi
-#
-      #      echo "| **All files** | $LINE_RATE | $HEALTH |" >> $GITHUB_STEP_SUMMARY
-      #      echo "| **Summary** | $SUMMARY | $HEALTH |" >> $GITHUB_STEP_SUMMARY
-      #    else
-      #      echo "⚠️ No se encontró clover.xml para Vitest" >> $GITHUB_STEP_SUMMARY
-      #      echo "| All files | N/A | ❌ |" >> $GITHUB_STEP_SUMMARY
-      #      echo "| Summary | N/A | ❌ |" >> $GITHUB_STEP_SUMMARY
-      #    fi
+          echo "VITE_NODE_ENV=test" >> .env
+      - name: Run Frontend Tests with Coverage
+        run: |
+          cd frontend
+          npm run coverage
+      - name: Publish Vitest Results
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Vitest Results
+          path: frontend/junit.xml
+          reporter: java-junit
+      - name: Install xmlstarlet
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xmlstarlet
+      - name: Write Frontend Coverage to Summary
+        run: |
+          echo "## Frontend Unit Test Coverage" >> $GITHUB_STEP_SUMMARY
+          echo "| File | Line Rate | Health |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|------------|--------|" >> $GITHUB_STEP_SUMMARY
+
+          if [ -f frontend/coverage/clover.xml ]; then
+            xmlstarlet sel -t -m "//file" -v "concat(@name,'|',metrics/@statements,'|',metrics/@coveredstatements)" -n frontend/coverage/clover.xml |
+            while IFS='|' read -r FILE STATEMENTS COVERED_STATEMENTS; do
+              if [ -z "$STATEMENTS" ] || [ "$STATEMENTS" = "0" ]; then
+                LINE_RATE="0%"
+                HEALTH="❌"
+              else
+                LINE_RATE_INT=$(echo "($COVERED_STATEMENTS * 100) / $STATEMENTS" | bc)
+                LINE_RATE=$(printf "%s%%" "$LINE_RATE_INT")
+                if [ "$LINE_RATE_INT" -ge 80 ]; then
+                  HEALTH="✔"
+                elif [ "$LINE_RATE_INT" -ge 50 ]; then
+                  HEALTH="➖"
+                else
+                  HEALTH="❌"
+                fi
+              fi
+              echo "| $FILE | $LINE_RATE | $HEALTH |" >> $GITHUB_STEP_SUMMARY
+            done
+
+            TOTAL_STATEMENTS=$(xmlstarlet sel -t -v "//project/metrics/@statements" frontend/coverage/clover.xml)
+            COVERED_STATEMENTS=$(xmlstarlet sel -t -v "//project/metrics/@coveredstatements" frontend/coverage/clover.xml)
+
+            if [ -z "$TOTAL_STATEMENTS" ] || [ "$TOTAL_STATEMENTS" -eq 0 ]; then
+              LINE_RATE="0%"
+              HEALTH="❌"
+              SUMMARY="0% (0 / 0)"
+            else
+              LINE_RATE_INT=$(echo "($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc)
+              LINE_RATE=$(printf "%s%%" "$LINE_RATE_INT")
+              SUMMARY="$LINE_RATE ($COVERED_STATEMENTS / $TOTAL_STATEMENTS)"
+              if [ "$LINE_RATE_INT" -ge 80 ]; then
+                HEALTH="✔"
+              elif [ "$LINE_RATE_INT" -ge 50 ]; then
+                HEALTH="➖"
+              else
+                HEALTH="❌"
+              fi
+            fi
+
+            echo "| **All files** | $LINE_RATE | $HEALTH |" >> $GITHUB_STEP_SUMMARY
+            echo "| **Summary** | $SUMMARY | $HEALTH |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⚠️ No se encontró clover.xml para Vitest" >> $GITHUB_STEP_SUMMARY
+            echo "| All files | N/A | ❌ |" >> $GITHUB_STEP_SUMMARY
+            echo "| Summary | N/A | ❌ |" >> $GITHUB_STEP_SUMMARY
+          fi
       - name: Build Frontend
         run: |
           cd frontend
@@ -225,117 +225,117 @@ jobs:
           app_location: "frontend/dist"
           skip_app_build: true
   
-  #integration-tests:
-  #  needs: [deploy-backend-qa, deploy-frontend-qa]
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - uses: actions/checkout@v4
-  #    - name: Set up Node.js
-  #      uses: actions/setup-node@v4
-  #      with:
-  #        node-version: '20'
-  #    - name: Install Frontend Dependencies
-  #      run: |
-  #        cd frontend
-  #        npm install
-  #    - name: Create Frontend .env File
-  #      run: |
-  #        cd frontend
-  #        echo "VITE_API_URL_QA=${{ secrets.BACKEND_QA_URL }}" > .env
-  #        echo "VITE_API_URL_PROD=${{ secrets.BACKEND_PROD_URL }}" >> .env
-  #        echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> .env
-  #        echo "VITE_FIREBASE_CONFIG_QA=${{ secrets.FIREBASE_CONFIG_QA }}" >> .env
-  #        echo "VITE_GOOGLE_CLIENT_ID_QA=${{ secrets.GOOGLE_CLIENT_ID_QA }}" >> .env
-  #        echo "VITE_FIREBASE_CONFIG_PROD=${{ secrets.FIREBASE_CONFIG_PROD }}" >> .env
-  #        echo "VITE_GOOGLE_CLIENT_ID_PROD=${{ secrets.GOOGLE_CLIENT_ID_PROD }}" >> .env
-  #        echo "VITE_GOOGLE_MAPS_API_KEY_QA=${{ secrets.GOOGLE_MAPS_API_KEY_QA }}" >> .env
-  #        echo "VITE_GOOGLE_MAPS_API_KEY_PROD=${{ secrets.GOOGLE_MAPS_API_KEY_PROD }}" >> .env
-  #        echo "VITE_OSRM_URL=${{ secrets.OSRM_URL }}" >> .env
-  #        echo "VITE_WEB_PUSH_PUBLIC_KEY_QA=${{ secrets.VAPID_PUBLIC_KEY }}" >> .env
-  #        echo "VITE_WEB_PUSH_PUBLIC_KEY_PROD=${{ secrets.VAPID_PRIVATE_KEY }}" >> .env
-  #        echo "VITE_NODE_ENV=test" >> .env
-  #    - name: Run Cypress Tests with Coverage
-  #      run: |
-  #        cd frontend
-  #        npm run cy:run --reporter mocha-junit-reporter --reporter-options "mochaFile=cypress/results.xml"
-  #    - name: Publish Test Results
-  #      uses: dorny/test-reporter@v1
-  #      if: always()
-  #      with:
-  #        name: Cypress Results
-  #        path: frontend/cypress/results.xml
-  #        reporter: java-junit
+  integration-tests:
+    needs: [deploy-backend-qa, deploy-frontend-qa]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install Frontend Dependencies
+        run: |
+          cd frontend
+          npm install
+      - name: Create Frontend .env File
+        run: |
+          cd frontend
+          echo "VITE_API_URL_QA=${{ secrets.BACKEND_QA_URL }}" > .env
+          echo "VITE_API_URL_PROD=${{ secrets.BACKEND_PROD_URL }}" >> .env
+          echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> .env
+          echo "VITE_FIREBASE_CONFIG_QA=${{ secrets.FIREBASE_CONFIG_QA }}" >> .env
+          echo "VITE_GOOGLE_CLIENT_ID_QA=${{ secrets.GOOGLE_CLIENT_ID_QA }}" >> .env
+          echo "VITE_FIREBASE_CONFIG_PROD=${{ secrets.FIREBASE_CONFIG_PROD }}" >> .env
+          echo "VITE_GOOGLE_CLIENT_ID_PROD=${{ secrets.GOOGLE_CLIENT_ID_PROD }}" >> .env
+          echo "VITE_GOOGLE_MAPS_API_KEY_QA=${{ secrets.GOOGLE_MAPS_API_KEY_QA }}" >> .env
+          echo "VITE_GOOGLE_MAPS_API_KEY_PROD=${{ secrets.GOOGLE_MAPS_API_KEY_PROD }}" >> .env
+          echo "VITE_OSRM_URL=${{ secrets.OSRM_URL }}" >> .env
+          echo "VITE_WEB_PUSH_PUBLIC_KEY_QA=${{ secrets.VAPID_PUBLIC_KEY }}" >> .env
+          echo "VITE_WEB_PUSH_PUBLIC_KEY_PROD=${{ secrets.VAPID_PRIVATE_KEY }}" >> .env
+          echo "VITE_NODE_ENV=test" >> .env
+      - name: Run Cypress Tests with Coverage
+        run: |
+          cd frontend
+          npm run cy:run --reporter mocha-junit-reporter --reporter-options "mochaFile=cypress/results.xml"
+      - name: Publish Test Results
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Cypress Results
+          path: frontend/cypress/results.xml
+          reporter: java-junit
 
   #=======================
   # STAGE: DEPLOY TO PROD
   #=======================
-  #deploy-backend-prod:
-  #  needs: integration-tests
-  #  environment: production
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Download Backend Artifact
-  #      uses: actions/download-artifact@v4
-  #      with:
-  #        name: backend-artifact
-  #        path: .
-  #    - name: Create Backend Environment File
-  #      run: |
-  #        echo "DATABASE_URL=${{ secrets.DATABASE_PROD_URL }}" > env.config
-  #        echo "FRONTEND_URL=${{ secrets.FRONTEND_PROD_URL }}" >> env.config
-  #        echo "FIREBASE_CREDENTIALS=${{ secrets.FIREBASE_CREDENTIALS_JSON_PROD }}" >> env.config
-  #        echo "FIREBASE_DATABASE_URL=${{ secrets.FIREBASE_DATABASE_URL_PROD }}" >> env.config
-  #        echo "EMAIL_ADMIN=${{ secrets.EMAIL_ADMIN_PROD }}" >> env.config
-  #        echo "NOMBRE_ADMIN=${{ secrets.NOMBRE_ADMIN_PROD }}" >> env.config
-  #        echo "PASSWORD_ADMIN=${{ secrets.PASSWORD_ADMIN_PROD }}" >> env.config
-  #        echo "GOOGLE_CREDENTIALS=${{ secrets.GOOGLE_CREDENTIALS_JSON_PROD }}" >> env.config
-  #        echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_PROD }}" >> env.config
-  #        echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID_PROD }}" >> env.config
-  #        echo "VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}" >> env.config
-  #    - name: Login to Azure
-  #      uses: azure/login@v1
-  #      with:
-  #        creds: ${{ secrets.AZURE_CREDENTIALS }}
-  #    - name: Deploy to Azure App Service
-  #      uses: azure/webapps-deploy@v3
-  #      with:
-  #        app-name: 'Inversur'
-  #        publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE_PROD }}
-  #    - name: Start Azure App Service
-  #      uses: azure/CLI@v1
-  #      with:
-  #        inlineScript: |
-  #          az webapp start --name Inversur --resource-group Inversur
-#
-  #deploy-frontend-prod:
-  #  needs: integration-tests
-  #  environment: production
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Download Frontend Artifact
-  #      uses: actions/download-artifact@v4
-  #      with:
-  #        name: frontend-artifact
-  #        path: frontend/dist/
-  #    - name: Create Frontend .env File
-  #      run: |
-  #        echo "VITE_API_URL_QA=${{ secrets.BACKEND_QA_URL }}" > .env
-  #        echo "VITE_API_URL_PROD=${{ secrets.BACKEND_PROD_URL }}" >> .env
-  #        echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> .env
-  #        echo "VITE_FIREBASE_CONFIG_QA=${{ secrets.FIREBASE_CONFIG_QA }}" >> .env
-  #        echo "VITE_GOOGLE_CLIENT_ID_QA=${{ secrets.GOOGLE_CLIENT_ID_QA }}" >> .env
-  #        echo "VITE_FIREBASE_CONFIG_PROD=${{ secrets.FIREBASE_CONFIG_PROD }}" >> .env
-  #        echo "VITE_GOOGLE_CLIENT_ID_PROD=${{ secrets.GOOGLE_CLIENT_ID_PROD }}" >> .env
-  #        echo "VITE_GOOGLE_MAPS_API_KEY_QA=${{ secrets.GOOGLE_MAPS_API_KEY_QA }}" >> .env
-  #        echo "VITE_GOOGLE_MAPS_API_KEY_PROD=${{ secrets.GOOGLE_MAPS_API_KEY_PROD }}" >> .env
-  #        echo "VITE_OSRM_URL=${{ secrets.OSRM_URL }}" >> .env
-  #        echo "VITE_WEB_PUSH_PUBLIC_KEY_QA=${{ secrets.VAPID_PUBLIC_KEY }}" >> .env
-  #        echo "VITE_WEB_PUSH_PUBLIC_KEY_PROD=${{ secrets.VAPID_PRIVATE_KEY }}" >> .env
-  #        echo "VITE_NODE_ENV=notest" >> .env
-  #    - name: Deploy to Azure Static Web Apps
-  #      uses: Azure/static-web-apps-deploy@v1
-  #      with:
-  #        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_PROD }}
-  #        action: "upload"
-  #        app_location: "frontend/dist"
-  #        skip_app_build: true
+  deploy-backend-prod:
+    needs: integration-tests
+    environment: production
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Backend Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: backend-artifact
+          path: .
+      - name: Create Backend Environment File
+        run: |
+          echo "DATABASE_URL=${{ secrets.DATABASE_PROD_URL }}" > env.config
+          echo "FRONTEND_URL=${{ secrets.FRONTEND_PROD_URL }}" >> env.config
+          echo "FIREBASE_CREDENTIALS=${{ secrets.FIREBASE_CREDENTIALS_JSON_PROD }}" >> env.config
+          echo "FIREBASE_DATABASE_URL=${{ secrets.FIREBASE_DATABASE_URL_PROD }}" >> env.config
+          echo "EMAIL_ADMIN=${{ secrets.EMAIL_ADMIN_PROD }}" >> env.config
+          echo "NOMBRE_ADMIN=${{ secrets.NOMBRE_ADMIN_PROD }}" >> env.config
+          echo "PASSWORD_ADMIN=${{ secrets.PASSWORD_ADMIN_PROD }}" >> env.config
+          echo "GOOGLE_CREDENTIALS=${{ secrets.GOOGLE_CREDENTIALS_JSON_PROD }}" >> env.config
+          echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_PROD }}" >> env.config
+          echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID_PROD }}" >> env.config
+          echo "VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}" >> env.config
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Deploy to Azure App Service
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'Inversur'
+          publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE_PROD }}
+      - name: Start Azure App Service
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az webapp start --name Inversur --resource-group Inversur
+
+  deploy-frontend-prod:
+    needs: integration-tests
+    environment: production
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Frontend Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-artifact
+          path: frontend/dist/
+      - name: Create Frontend .env File
+        run: |
+          echo "VITE_API_URL_QA=${{ secrets.BACKEND_QA_URL }}" > .env
+          echo "VITE_API_URL_PROD=${{ secrets.BACKEND_PROD_URL }}" >> .env
+          echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> .env
+          echo "VITE_FIREBASE_CONFIG_QA=${{ secrets.FIREBASE_CONFIG_QA }}" >> .env
+          echo "VITE_GOOGLE_CLIENT_ID_QA=${{ secrets.GOOGLE_CLIENT_ID_QA }}" >> .env
+          echo "VITE_FIREBASE_CONFIG_PROD=${{ secrets.FIREBASE_CONFIG_PROD }}" >> .env
+          echo "VITE_GOOGLE_CLIENT_ID_PROD=${{ secrets.GOOGLE_CLIENT_ID_PROD }}" >> .env
+          echo "VITE_GOOGLE_MAPS_API_KEY_QA=${{ secrets.GOOGLE_MAPS_API_KEY_QA }}" >> .env
+          echo "VITE_GOOGLE_MAPS_API_KEY_PROD=${{ secrets.GOOGLE_MAPS_API_KEY_PROD }}" >> .env
+          echo "VITE_OSRM_URL=${{ secrets.OSRM_URL }}" >> .env
+          echo "VITE_WEB_PUSH_PUBLIC_KEY_QA=${{ secrets.VAPID_PUBLIC_KEY }}" >> .env
+          echo "VITE_WEB_PUSH_PUBLIC_KEY_PROD=${{ secrets.VAPID_PRIVATE_KEY }}" >> .env
+          echo "VITE_NODE_ENV=notest" >> .env
+      - name: Deploy to Azure Static Web Apps
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_PROD }}
+          action: "upload"
+          app_location: "frontend/dist"
+          skip_app_build: true
