--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -283,7 +283,7 @@ jobs:
           reporter: java-junit
   
   update-env-files:
-    #needs: integration-tests
+    needs: integration-tests
     runs-on: ubuntu-latest
     steps:
       - name: Download Backend Artifact
